Prevents shell commands from wrapping

--- a/_sass/minima/_custom.scss
+++ b/_sass/minima/_custom.scss
@@ -164,6 +164,7 @@ div.perform {
 }
 span.perform {
   code {
+    display: inline-block;
     background-color: #00007f;
     color: white;
   }
